# scratch

./: .dockerignore  Dockerfile  README.md  app.cabal  run.command  stack.yaml
app/: app.cabal
app/src/: Main.hs  Rasterizer.hs  Rendering.hs  Structure.hs
src/: Main.hs  Structure.hs
